--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
     justify-content: center;
     min-height: 100vh;
     margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 img {
     filter: brightness(120%);
