--- a/src/pages/cursolatex/styles.css
+++ b/src/pages/cursolatex/styles.css
@@ -37,12 +37,13 @@ h1 {
 }
 
 .latexClass {
-    padding: 10px;
+    padding: 4px;
     border: 1px dotted #ccc;
     border-radius: 5px;
     background-color: #f9f9f9;
     width: 300px;
     color: #000;
+    height: 60px;
 }
 
 @media (max-width: 768px) {
