--- a/src/pages/cursolatex/styles.css
+++ b/src/pages/cursolatex/styles.css
@@ -40,9 +40,10 @@ h1 {
 .devicon-latex-original {
     font-size: 70px;
     color: #005252;
-    margin-left: 8px;
+    margin-top: 0;
     margin-right: 8px;
     margin-bottom: 0;
+    margin-left: 8px;
 }
 
 .latexClasses {
@@ -52,6 +53,7 @@ h1 {
     justify-content: center;
     gap: 20px;
     margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 .latexClass {
@@ -64,8 +66,21 @@ h1 {
     height: 60px;
 }
 
+.organizers {
+    margin-bottom: 30px;
+}
+
+.home {
+    color: #fff;
+    padding: 4px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border: 1px solid #fff;
+    border-radius: 20px;
+    margin: 30px;
+}
 @media (max-width: 768px) {
     h1 {
-        margin-top: 260px;
+        margin-top: 340px;
     }
 }
